rearrange template, fix datepicker datepicker icon on Safari, and ui issues on compact dropdown

--- a/src/components/datepicker/_datepicker.scss
+++ b/src/components/datepicker/_datepicker.scss
@@ -252,6 +252,7 @@ html.is-safari {
   .datepicker {
     + .trigger {
       position: relative;
+      top: 2px;
     }
   }
 }
